<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSecondary"
    android:orientation="vertical"
    tools:context=".ShopDetailActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_shop_detail_activity"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.DayNight.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.DayNight" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/sv_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:padding="20dp">

        <LinearLayout
            android:id="@+id/ll_shop_detail_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/ll_icons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="end"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_bookmark_icon"
                    android:layout_width="@dimen/activity_shop_detail_bookmark_icon"
                    android:layout_height="@dimen/activity_shop_detail_bookmark_icon"
                    android:layout_marginEnd="14dp"
                    android:background="@drawable/selector_bookmark_button"
                    android:contentDescription="@string/bookmark_function" />

                <ImageView
                    android:id="@+id/iv_share_icon"
                    android:layout_width="@dimen/activity_shop_detail_share_icon"
                    android:layout_height="@dimen/activity_shop_detail_share_icon"
                    android:background="@drawable/ripple_unbounded"
                    android:clickable="true"
                    android:contentDescription="@string/activity_shop_detail_share_icon"
                    android:src="@drawable/ic_share"
                    app:tint="@color/offBlack" />

            </LinearLayout>

            <ImageView
                android:id="@+id/iv_main_image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_shop_detail_shop_image_height"
                android:layout_marginTop="4dp"
                android:contentDescription="@string/activity_shop_detail_restaurant_image"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_launcher_gurumemo"
                android:tintMode="src_atop" />

            <TextView
                android:id="@+id/tv_shop_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:text="@string/shop_name"
                android:textSize="@dimen/activity_shop_detail_shop_name_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_catch_phrase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/catch_phrase" />

            <TextView
                android:id="@+id/tv_budget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/budget" />

            <TextView
                android:id="@+id/tv_opening_hours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/opening_hours" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_shop_detail_line_divider_height"
                android:layout_marginTop="14dp"
                android:background="@color/offBlack" />

            <TextView
                android:id="@+id/tv_address_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_shop_detail_address_title_size"
                android:text="@string/address"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_address_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/address_detail" />

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_shop_detail_map_fragment_height"
                android:layout_marginTop="14dp" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>