<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.ShopDetailFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_shop_detail_fragment"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.DayNight.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.DayNight" />

    <LinearLayout
        android:id="@+id/ll_shop_detail_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="40dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar_shop_detail_fragment">

        <LinearLayout
            android:id="@+id/ll_icons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_bookmark_icon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_bookmark"
                app:tint="@color/offBlack" />

            <ImageView
                android:id="@+id/iv_share_icon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_share"
                app:tint="@color/offBlack" />

        </LinearLayout>

        <ImageView
            android:id="@+id/iv_main_image"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/tv_shop_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/shop_name"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_budget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/budget" />

        <TextView
            android:id="@+id/tv_opening_hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/opening_hours" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="4dp"
            android:background="@color/offBlack" />

        <TextView
            android:id="@+id/tv_address_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/address"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_address_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/address_detail" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>