<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSecondary"
    android:padding="20dp"
    tools:context=".views.HomeFragment">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="80dp"
        android:src="@drawable/ic_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:background="@drawable/search_bar_background"
        android:drawableLeft="@drawable/ic_search_with_search_bar"
        android:drawablePadding="8dp"
        android:hint="@string/search_bar_hint"
        android:paddingLeft="16dp"
        android:textAlignment="textStart"
        android:textColorHint="@color/offWhite"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_logo" />

    <TextView
        android:id="@+id/tv_geocoder_thoroughfare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/geocoder_thoroughfare"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/btn_search" />

    <LinearLayout
        android:id="@+id/ll_geocoder_bottom_text_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/tv_geocoder_thoroughfare">

        <TextView
            android:id="@+id/tv_geocoder_country_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:text="@string/geocoder_country_name" />

        <TextView
            android:id="@+id/tv_geocoder_admin_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/geocoder_admin_area" />

    </LinearLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vp_image_slider"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_marginTop="24dp"
        android:background="@color/gray"
        android:clipChildren="false"
        android:clipToPadding="false"
        app:layout_constraintTop_toBottomOf="@id/ll_geocoder_bottom_text_area" />

</androidx.constraintlayout.widget.ConstraintLayout>