<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="14dp"
    android:orientation="vertical"
    card_view:cardCornerRadius="12dp"
    card_view:cardElevation="3dp"
    card_view:contentPadding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/whiteTransparent30"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_thumbnail_image"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_launcher" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingVertical="12dp"
                android:paddingStart="8dp"
                android:paddingEnd="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_shop_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:autoSizeMinTextSize="14sp"
                        android:autoSizeTextType="uniform"
                        android:textColor="@color/colorAccent"
                        android:ellipsize="end"
                        android:gravity="center_vertical"
                        android:maxLines="1"
                        android:text="@string/shop_name"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/btn_bookmark_icon"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:contentDescription="@string/bookmark_function"
                        android:background="@drawable/selector_bookmark_button" />

                </LinearLayout>


                <TextView
                    android:id="@+id/tv_catch_phrase"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:text="@string/catch_phrase" />

                <TextView
                    android:id="@+id/tv_access"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:text="@string/access" />

            </LinearLayout>

        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="14dp"
            android:background="@color/offWhite" />

        <FrameLayout
            android:id="@+id/fl_edit_memo_area"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_memo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="50dp"
                android:background="@color/colorSecondary"
                android:hint="@string/memo"
                android:importantForAutofill="no"
                android:inputType="none"
                android:paddingStart="14dp"
                android:paddingEnd="40dp"
                android:imeOptions="actionDone"
                android:textColorHint="@color/offWhite"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/iv_check_icon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/fragment_bookmark_check_icon"
                android:visibility="invisible"
                android:src="@drawable/ic_check"
                app:tint="@color/colorPrimary" />

        </FrameLayout>

    </LinearLayout>


</androidx.cardview.widget.CardView>